disable pvs for now

--- a/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
@@ -8,5 +8,5 @@ resources:
   - core-chrony.yaml
   - core-cilium.yaml
   - core-error-pages.yaml
-  - core-pvc.yaml
+  # - core-pvc.yaml
   - core-traefik.yaml
