--- a/k8s/clusters/cluster-0/manifests/core/_pvc/kustomization.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/_pvc/kustomization.yaml
@@ -2,3 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - backup-system-nfs-tank-share.yaml
+  - media-nfs-home-ryan.yaml
+  - media-nfs-home-stefanie.yaml
+  - media-nfs-pictures.yaml
+  - media-nfs-tank-share.yaml
