--- a/k8s/clusters/cluster-0/flux/orchestration/core-pvc.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/core-pvc.yaml
@@ -10,11 +10,7 @@ spec:
   interval: 5m
   path: "./k8s/clusters/cluster-0/manifests/core/_pvc"
   prune: true
-  wait: true
+  wait: false
   sourceRef:
     kind: GitRepository
     name: k8s-gitops
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-gpg
