--- a/k8s/clusters/cluster-0/flux/orchestration/core-pvc.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/core-pvc.yaml
@@ -10,7 +10,7 @@ spec:
   interval: 5m
   path: "./k8s/clusters/cluster-0/manifests/core/_pvc"
   prune: true
-  wait: false
+  wait: true
   sourceRef:
     kind: GitRepository
     name: k8s-gitops
