--- a/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
@@ -2,11 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - core-benji.yaml
+  - core-benji.yaml
   - core-cert-manager.yaml
   - core-certificates.yaml
   - core-chrony.yaml
   - core-cilium.yaml
   - core-error-pages.yaml
-  # - core-pvc.yaml
   - core-traefik.yaml
