attempt to deploy benji with a volumeSpec

--- a/k8s/clusters/cluster-0/manifests/core/backup-system/benji/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/backup-system/benji/helm-release.yaml
@@ -116,8 +116,9 @@ spec:
         #     - cleanup
       volumes:
         - name: backup-nas
-          persistentVolumeClaim:
-            claimName: backup-system-nfs-tank-share-pvc
+          nfs:
+            server: "nas.${SECRET_DOMAIN}"
+            path: /mnt/tank/share
         - name: mon-endpoint-volume
           configMap:
             name: rook-ceph-mon-endpoints
@@ -135,7 +136,7 @@ spec:
         - name: ceph-data
           mountPath: /etc/ceph
     fsfreeze:
-      enabled: true
+      enabled: false
     postgresql:
       enabled: false
       postgresqlUsername: benji
