removed the wrong thing

--- a/k8s/clusters/cluster-0/flux/deploy/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/deploy/kustomization.yaml
@@ -5,7 +5,6 @@ resources:
   - cluster-repositories.yaml
   - manage-flux.yaml
   - cluster-config.yaml
-  # - cluster-crds.yaml
+  - cluster-crds.yaml
   - cluster-namespaces.yaml
   - cluster-orchestration.yaml
-  - cluster-storage.yaml
