--- a/k8s/clusters/cluster-0/manifests/core/backup-system/benji/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/backup-system/benji/helm-release.yaml
@@ -151,13 +151,27 @@ spec:
         tag: v1.4.2
         pullPolicy: IfNotPresent
       nameOverride: pushgateway
-  # postRenderers:
-  #   - kustomize:
-  #       patchesJson6902:
-  #         - target:
-  #             kind: Deployment
-  #             name: benji-maint
-  #           patch:
+  postRenderers:
+    - kustomize:
+        patchesJson6902:
+          - target:
+              kind: Deployment
+              name: benji-maint
+            patch:
+              - op: replace
+                path: /spec/template/spec/containers/0/volumeMounts
+                value:
+                  - name: benji-config
+                    mountPath: /benji/etc
+          - target:
+              kind: DaemonSet
+              name: benji-fsfreeze
+            patch:
+              - op: replace
+                path: /spec/template/spec/containers/0/volumeMounts
+                value:
+                  - name: rbd-mounts
+                    mountPath: /var/lib/kubelet/plugins/kubernetes.io/rbd/mounts/
   #             - op: add
   #               path: /spec/template/spec/initContainers
   #               value:
