--- a/k8s/clusters/cluster-0/manifests/core/rook-ceph/operator/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/rook-ceph/operator/helm-release.yaml
@@ -18,7 +18,7 @@ spec:
         namespace: flux-system
   values:
     crds:
-      enabled: true
+      enabled: false
 
     csi:
       kubeletDirPath: /var/lib/kubelet
