add node-3 to deployment

--- a/k8s/clusters/sidero/manifests/default/sidero/serverclasses/cluster-0-worker.yaml
+++ b/k8s/clusters/sidero/manifests/default/sidero/serverclasses/cluster-0-worker.yaml
@@ -33,7 +33,7 @@ spec:
     - op: add
       path: /machine/network/interfaces
       value:
-        - interface: eth0
+        - interface: ens1f0
           dhcp: true
 
   selector:
