fix interface config

--- a/k8s/clusters/sidero/manifests/default/sidero/serverclasses/cluster-0-worker.yaml
+++ b/k8s/clusters/sidero/manifests/default/sidero/serverclasses/cluster-0-worker.yaml
@@ -31,11 +31,12 @@ spec:
         fs.inotify.max_user_instances: "8192"
 
     - op: add
-      path: /machine/network/interfaces
+      path: /machine/network
       value:
-        - interface: ens1f0
-          dhcp: true
-
+        interfaces:
+          - interface: ens1f0
+            dhcp: true
+          
   selector:
     matchExpressions:
       - key: control-plane
