attempt to use an OSD failuredomain for testing

--- a/k8s/clusters/cluster-0/manifests/core/rook-ceph/cluster/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/rook-ceph/cluster/helm-release.yaml
@@ -77,7 +77,7 @@ spec:
     cephBlockPools:
       - name: ceph-blockpool
         spec:
-          failureDomain: host
+          failureDomain: osd
           replicated:
             size: 3
         storageClass:
