it's eth2 not eth0

--- a/k8s/clusters/sidero/manifests/default/sidero/serverclasses/cluster-0-worker.yaml
+++ b/k8s/clusters/sidero/manifests/default/sidero/serverclasses/cluster-0-worker.yaml
@@ -34,7 +34,7 @@ spec:
       path: /machine/network
       value:
         interfaces:
-          - interface: ens1f0
+          - interface: eth2
             dhcp: true
           
   selector:
