--- a/k8s/clusters/cluster-0/manifests/core/rook-ceph/add-ons/reflector/cron-job.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/rook-ceph/add-ons/reflector/cron-job.yaml
@@ -19,8 +19,7 @@ spec:
           restartPolicy: Never
           containers:
             - name: secret-reflector
-              # image: ghcr.io/k8s-at-home/kubectl:v1.22.1
-              image: alpine/k8s:1.21.2
+              image: ghcr.io/k8s-at-home/kubectl:v1.23.1
               env:
                 - name: SECRETS
                   value: "rook-ceph-mon"
@@ -33,8 +32,7 @@ spec:
                   subPath: secret-reflector.sh
                   readOnly: true
             - name: configmap-reflector
-              # image: ghcr.io/k8s-at-home/kubectl:v1.22.1
-              image: alpine/k8s:1.21.2
+              image: ghcr.io/k8s-at-home/kubectl:v1.23.1
               env:
                 - name: CONFIGMAPS
                   value: "rook-ceph-mon-endpoints"
