--- a/k8s/clusters/cluster-0/manifests/core/kube-system/cilium/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/kube-system/cilium/helm-release.yaml
@@ -86,6 +86,6 @@ spec:
                 - "hubble.${SECRET_DOMAIN}"
 
     bgp:
-      enabled: false
+      enabled: true
       announce:
         loadbalancerIP: true
