--- a/k8s/clusters/cluster-0/manifests/apps/media/plex/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/plex/helm-release.yaml
@@ -32,7 +32,7 @@ spec:
       main:
         enabled: true
         type: LoadBalancer
-        loadbalancerIP: 10.45.100.100
+        loadBalancerIP: 10.45.100.100
         externalTrafficPolicy: Local
         port:
           port: 32400
