update traefik service address

--- a/k8s/clusters/cluster-0/manifests/core/network/traefik/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/network/traefik/helm-release.yaml
@@ -29,10 +29,7 @@ spec:
     service:
       enabled: true
       type: LoadBalancer
-      spec:
-        externalIPs:
-          - "${SVC_TRAEFIK_ADDRESS}"
-        externalTrafficPolicy: Local
+      loadBalancerIP: ${SVC_TRAEFIK_ADDRESS}
       annotations:
         external-dns.alpha.kubernetes.io/hostname: "ipv4.${SECRET_DOMAIN}"
     logs:
