update benji to use quay for promgateway

--- a/k8s/clusters/cluster-0/manifests/core/backup-system/benji/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/backup-system/benji/helm-release.yaml
@@ -145,8 +145,7 @@ spec:
         existingClaim: benji-postgresql-pvc
     pushgateway:
       image:
-        registry: docker.io
-        repository: prom/pushgateway
+        repository: quay.io/prometheus/pushgateway
         tag: v1.4.2
         pullPolicy: IfNotPresent
       nameOverride: pushgateway
