update network on rook-ceph to use host networking

--- a/k8s/clusters/cluster-0/manifests/core/rook-ceph/cluster/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/rook-ceph/cluster/helm-release.yaml
@@ -22,6 +22,9 @@ spec:
     monitoring:
       enabled: true
 
+    network:
+      provider: host
+
     cephClusterSpec:
       mon:
         count: 2
