use network host provider next time

--- a/k8s/clusters/cluster-0/manifests/core/rook-ceph/cluster/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/rook-ceph/cluster/helm-release.yaml
@@ -28,8 +28,8 @@ spec:
       mgr:
         count: 2
       
-      # network:
-      #   provider: host
+      network:
+        provider: host
 
       dashboard:
         enabled: true
