temporarily disable node labels to see if deployment fixed

--- a/k8s/clusters/sidero/manifests/default/sidero/serverclasses/cluster-0-worker.yaml
+++ b/k8s/clusters/sidero/manifests/default/sidero/serverclasses/cluster-0-worker.yaml
@@ -18,7 +18,7 @@ spec:
       path: /machine/kubelet/extraArgs
       value:
         rotate-server-certificates: true
-        node-labels: node-role.kubernetes.io/worker=true
+        # node-labels: node-role.kubernetes.io/worker=true
 
     - op: add
       path: /machine/time
