--- a/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - apps-media.yaml
-  - core-benji.yaml
+  # - core-benji.yaml
   - core-cert-manager.yaml
   - core-certificates.yaml
   - core-chrony.yaml
