deploy dex and authentik

--- a/k8s/clusters/cluster-0/manifests/apps/security/authentik/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/security/authentik/helm-release.yaml
@@ -69,7 +69,7 @@ spec:
       enabled: true
       persistence:
         enabled: true
-        existingClaim: authentik-postgresql
+        existingClaim: authentik-postgresql-pvc
 
       postgresqlUsername: authentik
       postgresqlDatabase: authentik
