--- a/k8s/clusters/cluster-0/manifests/apps/security/authentik/authentik-postgresql-pvc.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/security/authentik/authentik-postgresql-pvc.yaml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: authentik-postgresql 
-  namespace: security 
+  name: authentik-postgresql-pvc
+  namespace: security
 spec:
   accessModes:
     - ReadWriteOnce
@@ -11,4 +11,3 @@ spec:
     requests:
       storage: 10Gi
   storageClassName: ceph-block
-
