--- a/k8s/clusters/cluster-0/manifests/core/network/traefik/base/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/network/traefik/base/helm-release.yaml
@@ -10,28 +10,28 @@ spec:
     spec:
       # renovate: registryUrl=https://helm.traefik.io/traefik
       chart: traefik
-      version: 10.7.1
+      version: 10.9.1
       sourceRef:
         kind: HelmRepository
         name: traefik-charts
         namespace: flux-system
       interval: 5m
-  dependsOn:
-    - name: cert-manager
-      namespace: cert-manager
   values:
     image:
       name: ghcr.io/k8s-at-home/traefik
     deployment:
       enabled: true
-      kind: DaemonSet
-      # replicas: 3
+      kind: Deployment
+      replicas: 3
     service:
       enabled: true
       type: LoadBalancer
-      loadBalancerIP: ${SVC_TRAEFIK_ADDRESS}
+      spec:
+        loadBalancerIP: ${SVC_TRAEFIK_ADDRESS}
+        externalTrafficPolicy: Local
       annotations:
         external-dns.alpha.kubernetes.io/hostname: "ipv4.${SECRET_DOMAIN}"
+
     logs:
       general:
         format: json
@@ -39,23 +39,30 @@ spec:
       access:
         enabled: true
         format: json
+
     ingressClass:
       enabled: true
       isDefaultClass: true
       fallbackApiVersion: v1
+
     ingressRoute:
       dashboard:
         enabled: false
+
     globalArguments:
       - "--api.insecure=true"
       - "--serversTransport.insecureSkipVerify=true"
       - "--providers.kubernetesingress.ingressclass=traefik"
+      - "--providers.kubernetesingress.allowexternalnameservices"
       - "--metrics.prometheus=true"
       - "--metrics.prometheus.entryPoint=metrics"
       - "--entryPoints.websecure.forwardedHeaders.trustedIPs=10.0.0.0/8,192.168.0.0/16,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,104.16.0.0/13,104.24.0.0/14,108.162.192.0/18,131.0.72.0/22,141.101.64.0/18,162.158.0.0/15,172.64.0.0/13,173.245.48.0/20,188.114.96.0/20,190.93.240.0/20,197.234.240.0/22,198.41.128.0/17,2400:cb00::/32,2606:4700::/32,2803:f800::/32,2405:b500::/32,2405:8100::/32,2a06:98c0::/29,2c0f:f248::/32"
     additionalArguments:
       - "--providers.kubernetesingress.ingressendpoint.ip=${SVC_TRAEFIK_ADDRESS}"
+
     ports:
+      traefik:
+        expose: true
       web:
         redirectTo: websecure
       websecure:
@@ -66,29 +73,33 @@ spec:
         port: 8082
         expose: true
         exposedPort: 8082
+
     tlsOptions:
       default:
         minVersion: VersionTLS12
         maxVersion: VersionTLS13
         sniStrict: true
+
     pilot:
       enabled: false
-      # token: "722c9e7d-0103-42a8-82fd-9bb46868c5c4"
+
     experimental:
       plugins:
         enabled: true
+
     nodeSelector:
       node-role.kubernetes.io/worker: "true"
-    # affinity:
-    #   podAntiAffinity:
-    #     requiredDuringSchedulingIgnoredDuringExecution:
-    #     - labelSelector:
-    #         matchExpressions:
-    #         - key: app.kubernetes.io/name
-    #           operator: In
-    #           values:
-    #           - traefik
-    #       topologyKey: kubernetes.io/hostname
+
+    affinity:
+      podAntiAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+                - key: app.kubernetes.io/name
+                  operator: In
+                  values:
+                    - traefik
+            topologyKey: kubernetes.io/hostname
     resources:
       requests:
         memory: 100Mi
