add hubble ingress class name

--- a/k8s/clusters/cluster-0/manifests/core/kube-system/cilium/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/kube-system/cilium/helm-release.yaml
@@ -74,6 +74,7 @@ spec:
         rollOutPods: true
         ingress:
           enabled: true
+          className: traefik
           annotations:
             cert-manager.io/cluster-issuer: letsencrypt-production
             traefik.ingress.kubernetes.io/router.entrypoints: websecure
