--- a/k8s/clusters/cluster-0/manifests/apps/media/overseerr/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/overseerr/helm-release.yaml
@@ -22,9 +22,11 @@ spec:
       repository: ghcr.io/sct/overseerr
       tag: 1.27.0
       pullPolicy: Always
+
     env:
       TZ: "America/New_York"
       LOG_LEVEL: "info"
+
     ingress:
       main:
         enabled: true
@@ -36,21 +38,23 @@ spec:
           external-dns/is-public: "true"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         hosts:
-        - host: "requests.${SECRET_DOMAIN}"
-          paths:
-          - path: /
-            pathType: Prefix
+          - host: "requests.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
         tls:
-        - hosts:
-          - "requests.${SECRET_DOMAIN}"
-          secretName: overseerr-cert
+          - hosts:
+              - "requests.${SECRET_DOMAIN}"
+            secretName: tls.overseerr
+
     persistence:
       config:
         enabled: true
         mountPath: /app/config
-        existingClaim: overseerr-pvc
-      requests:
-        memory: 250Mi
-        cpu: 500m
-      limits:
-        memory: 1500Mi
+        existingClaim: overseerr-config-pvc
+
+    requests:
+      memory: 250Mi
+      cpu: 500m
+    limits:
+      memory: 1500Mi
