--- a/k8s/clusters/cluster-0/manifests/apps/media/radarr-uhd/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/radarr-uhd/helm-release.yaml
@@ -39,7 +39,7 @@ spec:
         tls:
         - hosts:
           - "radarr-uhd.${SECRET_DOMAIN}"
-          secretName: radarr-uhd-cert
+          secretName: tls.radarr-uhd
       api:
         enabled: true
         ingressClassName: "traefik"
@@ -53,14 +53,18 @@ spec:
         tls:
         - hosts:
           - "radarr-uhd.${SECRET_DOMAIN}"
-          secretName: radarr-uhd-cert
+          secretName: tls.radarr-uhd
     persistence:
       config:
         enabled: true
-        existingClaim: radarr-uhd-pvc
-      media:
+        existingClaim: radarr-uhd-config-pvc
+      nfs-nas-media:
         enabled: true
-        existingClaim: media-nfs-tank-share-pvc
+        type: custom
+        volumeSpec:
+          nfs:
+            server: "nas.${SECRET_DOMAIN}"
+            path: /mnt/tank/share
         mountPath: /media
     resources:
       requests:
