--- a/k8s/clusters/cluster-0/manifests/apps/media/sabnzbd/config-pvc.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/sabnzbd/config-pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: readarr-ebooks-config-pvc
+  name: sabnzbd-config-pvc
   namespace: media
 spec:
   accessModes:
