--- a/k8s/clusters/cluster-0/manifests/apps/media/sabnzbd/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/sabnzbd/helm-release.yaml
@@ -42,7 +42,7 @@ spec:
         tls:
         - hosts:
           - "sabnzbd.${SECRET_DOMAIN}"
-          secretName: sabnzbd-cert
+          secretName: tls.sabnzbd
       api:
         enabled: true
         ingressClassName: "traefik"
@@ -56,15 +56,20 @@ spec:
         tls:
         - hosts:
           - "sabnzbd.${SECRET_DOMAIN}"
-          secretName: sabnzbd-cert
+          secretName: tls.sabnzbd
     persistence:
       config:
         enabled: true
-        existingClaim: sabnzbd-pvc
-      data:
+        existingClaim: sabnzbd-config-pvc
+      nfs-nas-media:
         enabled: true
-        existingClaim: media-nfs-tank-share-pvc
+        type: custom
+        volumeSpec:
+          nfs:
+            server: "nas.${SECRET_DOMAIN}"
+            path: /mnt/tank/share
         mountPath: /data
+        readOnly: false
     podAnnotations:
       cni.projectcalico.org/ipAddrs: "[\"10.42.45.10\"]"
     resources:
