update tls secret name for hubble

--- a/k8s/clusters/cluster-0/manifests/core/kube-system/cilium/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/kube-system/cilium/helm-release.yaml
@@ -82,7 +82,7 @@ spec:
           hosts:
             - "hubble.${SECRET_DOMAIN}"
           tls:
-            - secretName: hubble-tls
+            - secretName: tls.hubble
               hosts:
                 - "hubble.${SECRET_DOMAIN}"
 
