change dex cert name

--- a/k8s/clusters/cluster-0/manifests/apps/security/dex/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/security/dex/helm-release.yaml
@@ -40,7 +40,7 @@ spec:
       tls:
         - hosts:
             - "dex.${SECRET_DOMAIN}"
-          secretName: dex-cert
+          secretName: tls.dex
 
     config:
       issuer: https://dex.${SECRET_DOMAIN}
