--- a/k8s/clusters/cluster-0/flux/orchestration/apps-media.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/apps-media.yaml
@@ -94,7 +94,7 @@ spec:
     - name: cluster-namespaces
     - name: rook-ceph-cluster
     - name: apps-media-prowlarr
-    - name: apps-media sabnzbd
+    - name: apps-media-sabnzbd
   interval: 5m
   path: "./k8s/clusters/cluster-0/manifests/apps/media/sonarr"
   prune: true
@@ -117,7 +117,7 @@ spec:
     - name: cluster-namespaces
     - name: rook-ceph-cluster
     - name: apps-media-prowlarr
-    - name: apps-media sabnzbd
+    - name: apps-media-sabnzbd
   interval: 5m
   path: "./k8s/clusters/cluster-0/manifests/apps/media/radarr"
   prune: true
