--- a/k8s/clusters/cluster-0/flux/orchestration/apps-media.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/apps-media.yaml
@@ -140,7 +140,7 @@ spec:
     - name: cluster-namespaces
     - name: rook-ceph-cluster
     - name: apps-media-sonarr
-    - name: apps-media radarr
+    - name: apps-media-radarr
   interval: 5m
   path: "./k8s/clusters/cluster-0/manifests/apps/media/overseerr"
   prune: true
