--- a/k8s/clusters/cluster-0/manifests/apps/media/qbittorrent/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/qbittorrent/helm-release.yaml
@@ -58,28 +58,38 @@ spec:
         tls:
           - hosts:
               - "qb.${SECRET_DOMAIN}"
+            secretName: tls.qb
     podSecurityContext:
       supplementalGroups:
         - 100
+
     persistence:
       config:
         enabled: true
-        existingClaim: qb-pvc
-      media-nas:
+        existingClaim: qb-config-pvc
+      nfs-nas-media:
         enabled: true
-        existingClaim: media-nfs-tank-share-pvc
+        type: custom
+        volumeSpec:
+          nfs:
+            server: "nas.${SECRET_DOMAIN}"
+            path: /mnt/tank/share
         mountPath: /media
+        readOnly: false
+
     resources:
       requests:
         memory: 250Mi
         cpu: 500m
       limits:
         memory: 6000Mi
+
     prometheus:
       podMonitor:
         enabled: true
         interval: 10m
         scrapeTimeout: 2m
+
     additionalContainers:
       - name: exporter
         image: esanchezm/prometheus-qbittorrent-exporter:latest
