--- a/k8s/clusters/cluster-0/manifests/apps/media/qbittorrent/kustomization.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/qbittorrent/kustomization.yaml
@@ -2,6 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - config-pvc.yaml
   - helm-release.yaml
   - pod-monitor.yaml
   # - tag-tracker-errors
