wrong file name

--- a/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - apps-media.yaml
   - apps-security.yaml
-  - core-home.yaml
+  - apps-home.yaml
   # - core-benji.yaml
   - core-cert-manager.yaml
   - core-certificates.yaml
