deploy metrics-server

--- a/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - core-chrony.yaml
   - core-cilium.yaml
   - core-error-pages.yaml
+  - core-metrics-server.yaml
   - core-nfd.yaml
   - core-rbac.yaml
   - core-rook-ceph.yaml
