--- a/k8s/clusters/cluster-0/flux/orchestration/apps-home.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/apps-home.yaml
@@ -86,3 +86,26 @@ spec:
     provider: sops
     secretRef:
       name: sops-gpg
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: apps-home-frigate
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cluster-namespaces
+    - name: core-nfd
+    - name: rook-ceph-cluster
+    - name: apps-home-mosquitto
+  interval: 5m
+  path: "./k8s/clusters/cluster-0/manifests/apps/home/frigate"
+  prune: true
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: k8s-gitops
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-gpg
