--- a/k8s/clusters/cluster-0/flux/orchestration/core-velero.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/core-velero.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: core-benji
+  name: core-nfd
   namespace: flux-system
 spec:
   dependsOn:
     - name: cluster-namespaces
   interval: 5m
-  path: "./k8s/clusters/cluster-0/manifests/core/backup-system/benji"
+  path: "./k8s/clusters/cluster-0/manifests/core/velero"
   prune: true
   wait: true
   sourceRef:
