--- a/k8s/clusters/cluster-0/flux/orchestration/core-velero.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/core-velero.yaml
@@ -7,8 +7,9 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-namespaces
+    - name: velero-crds
   interval: 5m
-  path: "./k8s/clusters/cluster-0/manifests/core/velero"
+  path: "./k8s/clusters/cluster-0/manifests/core/velero/velero"
   prune: true
   wait: true
   sourceRef:
