--- a/k8s/clusters/cluster-0/flux/orchestration/core-velero.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/core-velero.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: core-nfd
+  name: core-velero
   namespace: flux-system
 spec:
   dependsOn:
