--- a/k8s/clusters/cluster-0/flux/vars/cluster-secrets.sops.yaml
+++ b/k8s/clusters/cluster-0/flux/vars/cluster-secrets.sops.yaml
@@ -7,6 +7,8 @@ metadata:
 stringData:
   SECRET_MINIO_ACCESS_KEY: ENC[AES256_GCM,data:rfUx9j4Kvjyo2g==,iv:W8pvEnf7rBEdTqmKndCOWyidtmPJQcg4hH7+nQI/FdM=,tag:mVlpybQ33k/RqkTHVMuNNQ==,type:str]
   SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:onNAvK0NuRnwcA==,iv:qukLHdqZN5AJP4HJ5s0N+G2zwdFsUklJiGwv640SkzA=,tag:QkXCXdMpLXnYeqrAZKB14A==,type:str]
+  SECRET_MINIO_VELERO_KEY: ENC[AES256_GCM,data:eFcO5pP6,iv:xofTxceFOaUT6MAF/p9qg5gfevWXb0rvLzYlbTqUcp4=,tag:3HhPcSzfovwKvzimCKXX8g==,type:str]
+  SECRET_MINIO_VELERO_SECRET_KEY: ENC[AES256_GCM,data:YhMY2EgwWus3zNsuZQ7TLifHEdfnMd+RUYA22OjVcJGTrEY+EDNJYmnGMIAfEmC2,iv:Elc0TTar9MadAIb5Yau5qmyzlB4JeZHtrAx7yekM0uY=,tag:lHVE3PN9QDJ+4HXf4dYylQ==,type:str]
   SECRET_DISCORD_KURED_WEBHOOK_URL: ENC[AES256_GCM,data:GhlAUKKQZi8PVzfH7+NCNrrtgco9redOBVWqt32WeaojRthq0FV1KjwbR+9L8NgsYIIHws9cEPkeXzcYiMW2CbyzYM37tLSJhQ/4Mt7zrK4tfGOn65ak3XxdzVR0f5dO4N7utld6mtCE+UqkMJovDWaI5D0Yo3Bx0P0uodqn,iv:g/hYI+iXdsJkdfbZpAFmfE2WVHZv238kIlAAOp5euNI=,tag:6Hw2V0gaEa1rauqC26T44A==,type:str]
   SECRET_AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:KDDYtNQc6WrUe/3ZoCRab89nPIcqdWw0EcApQRzh9ER5KXXF7gQhXzCJuVmvLoF+,iv:KWDPQjNg3wc2QiUJafTHwVikwxOjcSHGSkBXkM1Niu0=,tag:3Wy8FBNda2LdyfiFXCcbaw==,type:str]
   SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:PSPtzb1eIzUnRtoAumI=,iv:HaJPQ/o4SM4g9a9HZ9fLhv8Ypj55IRrsiprU+SMH7II=,tag:EOGk2vx3BV4bn+tnaqJR6A==,type:str]
@@ -91,8 +93,8 @@ sops:
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-12-29T05:13:11Z"
-  mac: ENC[AES256_GCM,data:tQvnWTdGknyCXY5yMvIFZmx6FbosrfGmhoVPYb/hctcI3s53/a0r907bvjQoX5mwr2rCYwReLOw3NXX1p6qZT0jUrpdiCp59Rqg8oQgPz7WAsRcW/wyNh+TywgklKNzW/ZG4RZmjOg3cH5LgYTJ4TOI9mcxM6p9vf1G9hUReRgs=,iv:26ml+TiJw8aJvMVBps/8m+xpDC93BBFHVdSyFAndnD0=,tag:3yoOyM92eDhFO2sMg5X7tQ==,type:str]
+  lastmodified: "2022-01-05T19:21:30Z"
+  mac: ENC[AES256_GCM,data:A2bxz9b+w7/yznbSIxbjj4xu5XLQvlLd0d/gUZsNcJqVVFBHkdHIeANMGcFtovb5Ee4Ao5R4RaafuYcsJGDnVqFZ7AqHwjOWM+QNqEzRWlni1yX03mz/vTd4bMrgKpVoqo9IomrhUCJHqNib2Q8For1CRHO9buvLhhxUCHboVIs=,iv:jg67LSffydRkgsInxJ4aapY6uq3B7xLwyCdBBJVsPOw=,tag:wUZwS8UU2LaEHOK0YhdhaA==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
